# AI-Lab-Computer-Vision-and-NLP

./: .gitignore  AI LAB REPORT .docx  AI Lab Report.docx  LICENSE  README.md  pyproject.toml  requirements.txt  sentiment-vision.ipynb
src/data/: data_augmentation.py  data_generators.py  data_paths.py  load_data.py
src/models/: cnn_model.py  compile_model.py  evaluate_model.py  make_predictions.py  model_training.py  save_model.py  save_weights.py
src/utils/: config.py  label_mapping.py  setup_environment.py  training_config.py
src/visualization/: display_predictions.py  image_processing.py  plot_training_results.py
