[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^1.5.3"
matplotlib = "^3.6.2"
seaborn = "^0.11.2"
tensorflow = "^2.10.0"
keras = "^2.10.0"
opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
